@@ -10,8 +10,8 @@ Release 3  from May 24, 2018
 Release 4  from Jun  4, 2018
 Release 5  from Jun 27, 2018
 Version for DiFX-2.6, Mar 4, 2019
-Release 6  from Jun 17, 2019
-Version for DiFX trunk, Jun 17, 2019
+Release 6  from Jun 18, 2019
+Version for DiFX trunk, Jun 18, 2019
 
 Version 1.6
 ~~~~~~~~~~~
